--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "framer-motion": "^6.2.8",
     "mdb-ui-kit": "^3.10.2",
     "mdbreact": "^5.2.0",
-    "next": "10.2.0",
+    "next": "^10.2.0",
     "next-compose-plugins": "^2.2.1",
     "next-fonts": "^1.5.1",
     "next-images": "^1.8.4",
